--- a/index.html
+++ b/index.html
@@ -107,5 +107,40 @@
       </div>
     </section>
     <img id="Intersect" src="images/Intersect.png" alt="" />
+
+    <section class="uniqueRoom">
+      <div class="text-container">
+        <h2>Our unique rooms within the wilderness retreat</h2>
+      </div>
+
+      <div class="cabin-Images">
+        <div>
+          <img src="images/Cabins.png" alt="" />
+        </div>
+        <div>
+          <img src="images/Cabins2.png" alt="" />
+        </div>
+        <div>
+          <img src="images/Cabin3.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="signup">
+      <img src="images/signup.png" alt="" />
+      <div class="text-overlay">
+        <h2>
+          Sign up and <span id="highlight-text"> get 10%</span> off your stay
+        </h2>
+        <p>
+          Not boring old news, just updates for our rentals. Take up on our
+          offers.
+        </p>
+
+        <form>
+          <input id="emailInput" type="email" placeholder="Email Address" />
+          <input type="submit" value="Get 10% off" />
+        </form>
+      </div>
+    </section>
   </body>
 </html>
