--- a/index.html
+++ b/index.html
@@ -142,5 +142,63 @@
         </form>
       </div>
     </section>
+
+    <section class="testimonial-container">
+      <div class="testimonial-heading">
+        <h2>Experience the Magic of The Wilderness Retreat</h2>
+        <p>
+          Welcome to our cosy  cabin in the woods! Our rental home, nestled in
+          the heart of the forest.
+        </p>
+      </div>
+      <div class="testmonial-carousel">
+        <div class="carousel-item">
+          <img src="images/test1.png" alt="Testimonial Image 1" />
+          <div class="testimonial">
+            <span>✌️</span>
+            <h3>Peaceful</h3>
+            <p>
+              "We had such a wonderful time at The Wilderness Retreat. The cabin
+              was cozy and comfortable."
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/test2.png" alt="Testimonial Image 2" />
+          <div class="testimonial">
+            <span>✌️</span>
+            <h3>Peaceful</h3>
+            <p>
+              "We had such a wonderful time at The Wilderness Retreat. The cabin
+              was cozy and comfortable."
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/test3.png" alt="Testimonial Image 2" />
+          <div class="testimonial">
+            <span>✌️</span>
+            <h3>Peaceful</h3>
+            <p>
+             "  Welcome to our cosy  cabin in the woods! Our rental home, nestled
+              in the heart of the forest."
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="controls">
+    <div>
+      <div class="controls">
+        <button id="prev" class="control-btn">←</button>
+        <button id="next" class="control-btn">→</button>
+      </div>
+    </div>
+      </div>
+    </section>
+
+   
+   
+
+    <script src="app.js"></script>
   </body>
 </html>
