--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grindelwald</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <header class="header">
@@ -180,24 +184,60 @@
             <span>✌️</span>
             <h3>Peaceful</h3>
             <p>
-             "  Welcome to our cosy  cabin in the woods! Our rental home, nestled
-              in the heart of the forest."
+              " Welcome to our cosy  cabin in the woods! Our rental home,
+              nestled in the heart of the forest."
             </p>
           </div>
         </div>
       </div>
       <div class="controls">
-    <div>
-      <div class="controls">
-        <button id="prev" class="control-btn">←</button>
-        <button id="next" class="control-btn">→</button>
-      </div>
-    </div>
+        <div>
+          <div class="controls">
+            <button id="prev" class="control-btn">←</button>
+            <button id="next" class="control-btn">→</button>
+          </div>
+        </div>
       </div>
     </section>
 
-   
-   
+    <footer class="footer-container">
+      <div class="footer-upper">
+        <div>
+          <h2>
+            It's time to get to know <br />
+            each other!
+          </h2>
+          <p>Grab a cup of coffee and...</p>
+          <span>Let's Talk</span>
+        </div>
+        <img src="images/infoIcon.png" alt="" />
+      </div>
+
+      <div class="footer-lower">
+        <div class="footer-lower1">
+          <h3>About</h3>
+          <p>Us in a true way</p>
+          <img src="images/Group 1590.png" alt="" />
+        </div>
+        <div class="footer-lower2">
+          <p>See our</p>
+          <h3>Rooms</h3>
+          <img src="images/arrow2.png" alt="" />
+        </div>
+        <div class="footer-lower3">
+          <p>You can</p>
+
+          <h3>Contact</h3>
+          <img src="images/arrow2.png" alt="" />
+        </div>
+      </div>
+    </footer>
+    <div class="bottom">
+      <p>Change Log</p>
+      <p>Style Guide</p>
+      <p>Licensing</p>
+      <p>Instructions</p>
+    </div>
 
     <script src="app.js"></script>
   </body>
